# wowtcg-tracker-api

./: .env.sample  .gitignore  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: codeql.yml  lint.yml  test.yml
api/: __init__.py  database.py
api/prisma/: schema.prisma
assets/: cards.json  expansions.json  prints.json
db/: database.py  fill_db.py  progressbar.py
docs/: README.rst
docs/db/: wowtcg-tracker-db-workbench.mwb  wowtcg-tracker-db-workbench.mwb.bak
prisma/: prisma_model_camel_to_pascal.py  schema.prisma
tests/: test_api.py  test_get.py
